fixes error - missing period

--- a/views/index.pug
+++ b/views/index.pug
@@ -110,7 +110,7 @@ html(lang='en')
                     h4 Munchery
                     h4.subheading Operations Coordinator & Local Support Team Lead
                   .timeline-body
-                    p Responsible for conducting interviews, hiring, on-boarding, training, scheduling, corrective counseling, payroll, and terminations of team members
+                    p Responsible for conducting interviews, hiring, on-boarding, training, scheduling, corrective counseling, payroll, and terminations of team members.
     section#portfolio
       .container
         .row
