adds new resume and codepen

--- a/views/index.pug
+++ b/views/index.pug
@@ -171,34 +171,32 @@ html(lang='en')
           .col-lg-6
             p Carson is a Brooklyn based fullstack web developer who likes coffee, bikes, ethics, and everything to do with cats.
             </br>
-            p Feel free to email me (carsonmhyde@gmail.com) about projects or gigs, get a PDF version of my resume, or find me on social media.
-            <br>
-            p Or check out my <a href="https://codepen.io/donutdespair">Codepen</a> for weird code bits.
+            p Feel free to email him (carsonmhyde@gmail.com) about projects or gigs, get a PDF version of his resume, or find him on social media.
           .col-lg-6
             h4 Languages:
 
-            p HTML, CSS, JavaScript, and Ruby
+            p HTML, CSS, JavaScript, SQL, and Ruby
             h4 Frameworks:
 
-            p Express JS and Ruby on Rails
+            p Express JS, Electron, and Ruby on Rails
             h4 More Skills:
 
-            p jQuery, Sinatra, Mustache JS, Node.js, Bootstrap
+            p jQuery, Sinatra, Mustache JS, Node.js, PostgreSQL, Shopify, ChannelAdvisor, PrestaShop, and Bootstrap
+            h4 Working On:
+
+            p React, Redux, Pug, and Cordova
     footer#contact.text-center
       .footer-above
         .container
           .row
-            .footer-col.col-md-4
-              h3 Current favorite programming concept:
-              p JavaScript's keyword <a href="http://codepen.io/donutdespair/pen/KNjMyN">"this"</a>
-            .footer-col.col-md-4
+            .footer-col-sm-offset-6
               h3 Contact
               ul.list-inline
                 li
                   a.btn-social.btn-outline(href='mailto:carsonmhyde@gmail.com')
                     i.fa.fa-envelope
                 li
-                  a.btn-social.btn-outline(href='img/chyderes-12-22.pdf')
+                  a.btn-social.btn-outline(href='img/carson-hyde-resume.pdf')
                     i.fa.fa-fw.fa-save
                 li
                   a.btn-social.btn-outline(href='https://twitter.com/coffeedcode')
@@ -209,9 +207,9 @@ html(lang='en')
                 li
                   a.btn-social.btn-outline(href='https://github.com/donutdespair')
                     i.fa.fa-fw.fa-github
-            .footer-col.col-md-4
-              h3 This portfolio runs on:
-              p Express JS, JS/jQuery, Pug, Font Awesome, and Bootstrap
+                li
+                  a.btn-social.btn-outline(href='https://codepen.io/donutdespair')
+                    i.fa.fa-fw.fa-codepen
     .scroll-top.page-scroll.hidden-sm.hidden-xs.hidden-lg.hidden-md
       a.btn.btn-primary(href='#page-top')
         i.fa.fa-chevron-up
